--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,3 @@
-# https://yarnpkg.com/configuration/yarnrc
 nodeLinker: node-modules
-# Define the registry to use when fetching packages.
-npmRegistryServer: 'https://registry.yarnpkg.com'
+
+npmRegistryServer: "https://registry.yarnpkg.com"
